--- a/index.html
+++ b/index.html
@@ -1767,7 +1767,7 @@
 							<h2 class="title">Deal of the day</h2>
 	
 							<div class="showcase-wrapper has-scrollbar">
-								<div class="showcase-container">
+								<!-- <div class="showcase-container">
 									<div class="showcase">
 										<div class="showcase-banner">
 											<img src="./assets/images/products/shampoo.jpg"
@@ -1842,7 +1842,7 @@
 											</div>
 										</div>
 									</div>
-								</div>
+								</div> -->
 	
 								<div class="showcase-container">
 									<div class="showcase">
@@ -2597,7 +2597,7 @@
 	
 								<h2 class="cta-title">Summer collection</h2>
 	
-								<p class="cta-text">Starting @ ₹10</p>
+								<p class="cta-text">Starting @ ₹999</p>
 	
 								<button class="cta-btn">Shop now</button>
 							</a>
@@ -2855,14 +2855,7 @@
 						</li>
 	
 						<li class="footer-nav-item flex">
-							<div class="icon-box">
-								<ion-icon name="location-outline"></ion-icon>
-							</div>
-	
-							<address class="content">
-								RZ-A-135, Street no.-6, Near Grand Shobha Hotel, Mahipalpur, New
-								Delhi
-							</address>
+							<span class="footer-nav-link" style="font-weight: 600; ">Vastra Vahini - A Unit of NAINSHI EXPORTS</span>
 						</li>
 	
 						<li class="footer-nav-item flex">
@@ -2870,7 +2863,7 @@
 								<ion-icon name="call-outline"></ion-icon>
 							</div>
 	
-							<a href="tel:+607936-8058" class="footer-nav-link">(828) 723-5140</a>
+							<a href="tel:+607936-8058" class="footer-nav-link">+91 98876-99265</a>
 						</li>
 	
 						<li class="footer-nav-item flex">
@@ -2923,7 +2916,7 @@
 					<!-- <img src="./assets/images/payment.svg" alt="payment method" class="payment-img"> -->
 	
 					<p class="copyright">
-						Copyright &copy; <a href="#">Vastravahini</a> all rights reserved.
+						Copyright &copy; Nainshi Exports all rights reserved.
 					</p>
 				</div>
 			</div>
