--- a/index.html
+++ b/index.html
@@ -2855,7 +2855,7 @@
 						</li>
 	
 						<li class="footer-nav-item flex">
-							<span class="footer-nav-link" style="font-weight: 600; ">Vastra Vahini - A Unit of NAINSHI EXPORTS</span>
+							<span class="footer-nav-link" style="font-weight: 600; ">Vastra Vahini</span>
 						</li>
 	
 						<li class="footer-nav-item flex">
